--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,7 +1,22 @@
 body {
-    margin: 0;
+  margin: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+  font-family: 'Roboto', sans-serif;
+}
+
+button {
+  padding: 10px 15px 10px 15px;
+  border-color: rgba(0, 0, 0, 0);
+  border-radius: 8px;
+  font-weight: 600;
+  text-transform: uppercase;
 }
 
 .page {
-    padding: 50px;
+  background-color: white;
+  padding: 20px;
+  margin: 20px;
+  width: 100%;
+  border-radius: 12px;
+  box-shadow: 4px 4px 5px 2px rgba(0, 0, 0, 0.3);
 }
