--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -12,6 +12,11 @@ button {
   text-transform: uppercase;
 }
 
+button:hover {
+  transform: scale(1.08);
+  transition: ease-in-out 200ms;
+}
+
 .page {
   background-color: white;
   padding: 20px;
@@ -19,4 +24,12 @@ button {
   width: 100%;
   border-radius: 12px;
   box-shadow: 4px 4px 5px 2px rgba(0, 0, 0, 0.3);
+}
+
+.primary {
+  background-color: #6a5acd;
+}
+
+.secondary {
+  background-color: #ff4444;
 }
