--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -21,7 +21,7 @@ button:hover {
   background-color: white;
   padding: 50px;
   margin: 20px;
-  width: 100%;
+  width: calc(100% - 60px);
   border-radius: 12px;
   box-shadow: 4px 4px 5px 2px rgba(0, 0, 0, 0.3);
 }
