--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,7 +1,10 @@
 body {
-  margin: 0;
+  display: flex;
+  flex-direction: column;
   background-color: rgba(0, 0, 0, 0.2);
   font-family: 'Roboto', sans-serif;
+  width: calc(100vw - 80px);
+  margin: 0;
 }
 
 button {
