Started DropdownMenu component for ProfileOptions

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -48,6 +48,7 @@ td {
   padding: 50px;
   margin: 20px;
   width: calc(100% - 60px);
+  height: 100%;
   border-radius: 12px;
   box-shadow: 4px 4px 5px 2px rgba(0, 0, 0, 0.3);
 }
