Created the LoginView

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -11,8 +11,11 @@ button {
   padding: 10px 15px 10px 15px;
   border-color: rgba(0, 0, 0, 0);
   border-radius: 8px;
+  
   font-weight: 600;
   text-transform: uppercase;
+
+  box-shadow: 4px 4px 5px 2px rgba(0, 0, 0, 0.3);
 }
 
 button:hover {
